--- a/packages/nightingale/package.json
+++ b/packages/nightingale/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nightingale",
-  "version": "6.0.0-rc.1",
+  "version": "6.0.0",
   "description": "Logger for browser and node",
   "keywords": [
     "logger"
