--- a/packages/nightingale-app-console/package.json
+++ b/packages/nightingale-app-console/package.json
@@ -19,23 +19,22 @@
     "watch": "pob-watch"
   },
   "devDependencies": {
-    "babel-eslint": "^7.0.0",
+    "babel-eslint": "^7.1.0",
     "babel-preset-es2015-node6": "^0.3.0",
-    "eslint": "^3.8.0",
-    "eslint-config-airbnb-base": "^8.0.0",
-    "eslint-config-pob": "^7.6.0",
+    "eslint": "^3.9.1",
+    "eslint-config-airbnb-base": "^9.0.0",
+    "eslint-config-pob": "^9.0.1",
     "eslint-plugin-babel": "^3.3.0",
-    "eslint-plugin-import": "^1.16.0",
+    "eslint-plugin-import": "^2.1.0",
     "komet": "^0.1.3",
     "komet-karma": "^0.2.3",
-    "pob-babel": "^9.0.1",
+    "pob-babel": "^12.5.5",
     "pob-release": "^2.2.2",
     "tcomb-forked": "^3.4.0"
   },
   "dependencies": {
-    "nightingale": "^5.0.0-beta.2",
-    "nightingale-console": "^2.0.0",
-    "nightingale-debug": "^1.0.2",
+    "nightingale": "^6.0.0",
+    "nightingale-console": "^2.1.0",
     "nightingale-error-processor": "^2.0.0"
   }
 }
