--- a/packages/nightingale-ansi-formatter/package.json
+++ b/packages/nightingale-ansi-formatter/package.json
@@ -24,24 +24,24 @@
     "watch": "pob-watch"
   },
   "dependencies": {
-    "ansi-styles": "chalk/ansi-styles#47ccb63c5b9b296b39188717b0efc4123a036d47",
-    "nightingale-formatter": "^1.4.0"
+    "ansi-styles": "github:chalk/ansi-styles#47ccb63c5b9b296b39188717b0efc4123a036d47",
+    "nightingale-formatter": "^1.4.0 || ^2.0.2"
   },
   "devDependencies": {
-    "babel-cli": "^6.16.0",
-    "babel-eslint": "^7.0.0",
-    "babel-preset-es2015-node6": "^0.3.0",
-    "eslint": "^3.8.0",
-    "eslint-config-airbnb-base": "^8.0.0",
-    "eslint-config-pob": "^7.6.0",
+    "babel-cli": "^6.18.0",
+    "babel-eslint": "^7.1.0",
+    "babel-preset-es2015-node6": "^0.4.0",
+    "eslint": "^3.10.2",
+    "eslint-config-airbnb-base": "^10.0.1",
+    "eslint-config-pob": "^9.0.1",
     "eslint-plugin-babel": "^3.3.0",
-    "eslint-plugin-import": "^1.16.0",
+    "eslint-plugin-import": "^2.2.0",
     "istanbul": "^0.4.5",
     "komet": "^0.1.3",
     "komet-karma": "^0.2.3",
     "mocha": "^3.1.2",
-    "pob-babel": "^9.0.0",
-    "pob-release": "^2.2.2",
+    "pob-babel": "^12.8.0",
+    "pob-release": "^2.3.0",
     "tcomb-forked": "^3.4.0",
     "xunit-file": "^1.0.0"
   }
