--- a/packages/nightingale-levels/package.json
+++ b/packages/nightingale-levels/package.json
@@ -9,5 +9,12 @@
   "license": "ISC",
   "author": "Christophe Hurpeau <christophe@hurpeau.com> (http://christophe.hurpeau.com/)",
   "repository": "nightingalejs/nightingale-levels",
-  "main": "./index.js"
+  "main": "./index.js",
+  "scripts": {
+    "version": "pob-version",
+    "release": "pob-repository-check-clean && pob-release"
+  },
+  "devDependencies": {
+    "pob-release": "^2.3.0"
+  }
 }
