--- a/packages/nightingale/package.json
+++ b/packages/nightingale/package.json
@@ -14,6 +14,8 @@
   "browser-dev": "./lib-browsers-dev/index.js",
   "webpack:main": "./lib-webpack/index.js",
   "webpack:main-dev": "./lib-webpack-dev/index.js",
+  "webpack:node": "./lib-node6/index.js",
+  "webpack:node-dev": "./lib-node6-dev/index.js",
   "webpack:main-modern-browsers": "./lib-webpack-modern-browsers/index.js",
   "webpack:main-modern-browsers-dev": "./lib-webpack-modern-browsers-dev/index.js",
   "scripts": {
@@ -39,14 +41,14 @@
     "babel-eslint": "^7.1.0",
     "babel-plugin-add-jsdoc-annotations": "^5.1.0",
     "babel-preset-es2015": "^6.18.0",
-    "babel-preset-es2015-node6": "^0.3.0",
+    "babel-preset-es2015-node6": "^0.4.0",
     "babel-preset-jsdoc": "^0.4.0",
-    "babel-preset-modern-browsers": "^6.0.0",
-    "eslint": "^3.9.1",
-    "eslint-config-airbnb-base": "^9.0.0",
-    "eslint-config-pob": "^9.0.1",
-    "eslint-plugin-babel": "^3.3.0",
-    "eslint-plugin-import": "^2.1.0",
+    "babel-preset-modern-browsers": "^7.0.0",
+    "eslint": "^3.10.2",
+    "eslint-config-airbnb-base": "^10.0.1",
+    "eslint-config-pob": "^10.0.1",
+    "eslint-plugin-babel": "^4.0.0",
+    "eslint-plugin-import": "^2.2.0",
     "istanbul": "^0.4.5",
     "jsdoc": "^3.4.2",
     "karma": "^1.3.0",
@@ -64,7 +66,7 @@
     "nightingale-json-formatter": "^1.2.0",
     "nightingale-string": "^2.0.0",
     "pob-babel": "^12.5.5",
-    "pob-release": "^2.2.2",
+    "pob-release": "^2.3.0",
     "tcomb-forked": "^3.4.0",
     "xunit-file": "^1.0.0"
   }
