--- a/packages/nightingale/package.json
+++ b/packages/nightingale/package.json
@@ -14,8 +14,8 @@
   "browser-dev": "./lib-browsers-dev/index.js",
   "webpack:main": "./lib-webpack/index.js",
   "webpack:main-dev": "./lib-webpack-dev/index.js",
-  "webpack:node": "./lib-node6/index.js",
-  "webpack:node-dev": "./lib-node6-dev/index.js",
+  "webpack:node": "./lib-webpack-node7/index.js",
+  "webpack:node-dev": "./lib-webpack-node7-dev/index.js",
   "webpack:main-modern-browsers": "./lib-webpack-modern-browsers/index.js",
   "webpack:main-modern-browsers-dev": "./lib-webpack-modern-browsers-dev/index.js",
   "scripts": {
@@ -34,20 +34,21 @@
     "watch": "pob-watch"
   },
   "dependencies": {
+    "flow-runtime": "^0.6.1",
     "nightingale-levels": "^1.1.0",
     "nightingale-logger": "^3.1.1"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.0",
     "babel-plugin-add-jsdoc-annotations": "^5.1.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-es2015-node6": "^0.4.0",
     "babel-preset-jsdoc": "^0.4.0",
-    "babel-preset-modern-browsers": "^7.0.0",
-    "eslint": "^3.12.2",
-    "eslint-config-airbnb-base": "^11.0.0",
-    "eslint-config-pob": "^10.0.1",
-    "eslint-plugin-babel": "^4.0.0",
+    "babel-preset-latest": "^6.22.0",
+    "babel-preset-latest-node": "^0.1.0",
+    "babel-preset-modern-browsers": "^8.1.1",
+    "eslint": "^3.16.1",
+    "eslint-config-airbnb-base": "^11.1.0",
+    "eslint-config-pob": "^11.1.0",
+    "eslint-plugin-babel": "^4.1.0",
     "eslint-plugin-import": "^2.2.0",
     "istanbul": "^0.4.5",
     "jsdoc": "^3.4.2",
@@ -58,16 +59,15 @@
     "karma-mocha": "^1.2.0",
     "karma-proclaim": "^1.0.0",
     "komet": "^0.1.4",
-    "komet-karma": "^0.2.3",
+    "komet-karma": "^0.2.5",
     "minami": "^1.1.1",
-    "mocha": "^3.1.2",
+    "mocha": "^3.2.0",
     "nightingale-console": "^2.2.0",
     "nightingale-console-output": "^1.2.0",
     "nightingale-json-formatter": "^1.2.0",
     "nightingale-string": "^2.0.0",
-    "pob-babel": "^12.9.0",
-    "pob-release": "^3.0.0",
-    "tcomb-forked": "^3.4.0",
+    "pob-babel": "^16.1.0",
+    "pob-release": "^3.1.0",
     "xunit-file": "^1.0.0"
   }
 }
