--- a/packages/nightingale-app-console/package.json
+++ b/packages/nightingale-app-console/package.json
@@ -7,34 +7,40 @@
   "license": "ISC",
   "repository": "git@github.com:nightingalejs/nightingale-app-console.git",
   "homepage": "https://github.com/nightingalejs/nightingale-app-console",
+  "engines": {
+    "node": ">=6.5.0"
+  },
   "main": "./index.js",
+  "webpack:node": "./lib-webpack-node7/index.js",
+  "webpack:node-dev": "./lib-webpack-node7-dev/index.js",
   "scripts": {
     "build": "pob-build",
     "clean": "rm -Rf docs dist test/node6 coverage",
-    "lint": "eslint --ext .js,.jsx --fix src/",
+    "lint": "eslint --ext .js,.jsx src/",
+    "prepare": "ln -s ../../git-hooks/pre-commit .git/hooks/pre-commit 2>/dev/null || true ; ln -s ../../git-hooks/post-checkout .git/hooks/post-checkout 2>/dev/null || true ; ln -s ../../git-hooks/post-merge .git/hooks/post-merge 2>/dev/null || true ; ln -s ../../git-hooks/prepare-commit-msg .git/hooks/prepare-commit-msg 2>/dev/null || true",
     "prepublish": "ln -s ../../git-hooks/pre-commit .git/hooks/pre-commit 2>/dev/null || true ; ln -s ../../git-hooks/post-checkout .git/hooks/post-checkout 2>/dev/null || true ; ln -s ../../git-hooks/post-merge .git/hooks/post-merge 2>/dev/null || true ; ln -s ../../git-hooks/prepare-commit-msg .git/hooks/prepare-commit-msg 2>/dev/null || true",
     "preversion": "npm run lint && npm run build && pob-repository-check-clean",
     "release": "pob-repository-check-clean && pob-release",
     "version": "pob-version",
     "watch": "pob-watch"
   },
-  "devDependencies": {
-    "babel-eslint": "^7.1.0",
-    "babel-preset-es2015-node6": "^0.3.0",
-    "eslint": "^3.9.1",
-    "eslint-config-airbnb-base": "^9.0.0",
-    "eslint-config-pob": "^9.0.1",
-    "eslint-plugin-babel": "^3.3.0",
-    "eslint-plugin-import": "^2.1.0",
-    "komet": "^0.1.3",
-    "komet-karma": "^0.2.3",
-    "pob-babel": "^12.5.5",
-    "pob-release": "^2.2.2",
-    "tcomb-forked": "^3.4.0"
-  },
   "dependencies": {
+    "flow-runtime": "^0.6.1",
     "nightingale": "^6.0.0",
     "nightingale-console": "^2.1.0",
     "nightingale-error-processor": "^2.0.0"
+  },
+  "devDependencies": {
+    "babel-eslint": "^7.1.0",
+    "babel-preset-latest-node": "^0.1.0",
+    "eslint": "^3.16.1",
+    "eslint-config-airbnb-base": "^11.1.0",
+    "eslint-config-pob": "^11.1.0",
+    "eslint-plugin-babel": "^4.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "komet": "^0.1.4",
+    "komet-karma": "^0.2.5",
+    "pob-babel": "^16.1.0",
+    "pob-release": "^3.1.0"
   }
 }
