--- a/packages/nightingale-app-console/package.json
+++ b/packages/nightingale-app-console/package.json
@@ -7,40 +7,50 @@
   "license": "ISC",
   "repository": "git@github.com:nightingalejs/nightingale-app-console.git",
   "homepage": "https://github.com/nightingalejs/nightingale-app-console",
-  "engines": {
-    "node": ">=6.5.0"
-  },
+  "engines": {},
   "main": "./index.js",
-  "webpack:node": "./lib-webpack-node7/index.js",
-  "webpack:node-dev": "./lib-webpack-node7-dev/index.js",
+  "module": "./lib-module/index.js",
+  "module-dev": "./lib-module-dev/index.js",
+  "browser": "./lib-browsers/index.js",
+  "browser-dev": "./lib-browsers-dev/index.js",
+  "module:node": "./lib-module-node7/index.js",
+  "module:node-dev": "./lib-module-node7-dev/index.js",
+  "module:browser": "./lib-module/index.js",
+  "module:browser-dev": "./lib-module-dev/index.js",
+  "module:modern-browsers": "./lib-module-modern-browsers/index.js",
+  "module:modern-browsers-dev": "./lib-module-modern-browsers-dev/index.js",
   "scripts": {
     "build": "pob-build",
     "clean": "rm -Rf docs dist test/node6 coverage",
     "lint": "eslint --ext .js,.jsx src/",
     "prepare": "ln -s ../../git-hooks/pre-commit .git/hooks/pre-commit 2>/dev/null || true ; ln -s ../../git-hooks/post-checkout .git/hooks/post-checkout 2>/dev/null || true ; ln -s ../../git-hooks/post-merge .git/hooks/post-merge 2>/dev/null || true ; ln -s ../../git-hooks/prepare-commit-msg .git/hooks/prepare-commit-msg 2>/dev/null || true",
     "prepublish": "ln -s ../../git-hooks/pre-commit .git/hooks/pre-commit 2>/dev/null || true ; ln -s ../../git-hooks/post-checkout .git/hooks/post-checkout 2>/dev/null || true ; ln -s ../../git-hooks/post-merge .git/hooks/post-merge 2>/dev/null || true ; ln -s ../../git-hooks/prepare-commit-msg .git/hooks/prepare-commit-msg 2>/dev/null || true",
-    "preversion": "npm run lint && npm run build && pob-repository-check-clean",
+    "preversion": "yarn run lint && yarn run build && pob-repository-check-clean",
     "release": "pob-repository-check-clean && pob-release",
     "version": "pob-version",
     "watch": "pob-watch"
   },
   "dependencies": {
-    "flow-runtime": "^0.6.1",
-    "nightingale": "^6.0.0",
-    "nightingale-console": "^2.1.0",
-    "nightingale-error-processor": "^2.0.0"
+    "flow-runtime": "^0.8.0",
+    "nightingale": "^6.1.1",
+    "nightingale-console": "^2.4.1",
+    "source-map-support": "^0.4.11"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.0",
+    "babel-preset-env": "^1.2.1",
     "babel-preset-latest-node": "^0.1.0",
-    "eslint": "^3.16.1",
-    "eslint-config-airbnb-base": "^11.1.0",
+    "babel-preset-modern-browsers": "^8.1.1",
+    "eslint": "^3.17.0",
+    "eslint-config-airbnb-base": "^11.1.1",
     "eslint-config-pob": "^11.1.0",
-    "eslint-plugin-babel": "^4.1.0",
+    "eslint-plugin-babel": "^4.1.1",
     "eslint-plugin-import": "^2.2.0",
     "komet": "^0.1.4",
     "komet-karma": "^0.2.5",
-    "pob-babel": "^16.1.0",
+    "pob-babel": "^17.0.2",
     "pob-release": "^3.1.0"
-  }
+  },
+  "webpack:node": "./lib-webpack-node7/index.js",
+  "webpack:node-dev": "./lib-webpack-node7-dev/index.js"
 }
