--- a/packages/nightingale-logger/package.json
+++ b/packages/nightingale-logger/package.json
@@ -9,14 +9,15 @@
   "license": "ISC",
   "repository": "git@github.com:nightingalejs/nightingale-logger.git",
   "homepage": "https://github.com/nightingalejs/nightingale-logger",
+  "engines": {},
   "main": "./lib/index.js",
+  "module": "./lib-module/index.js",
+  "module-dev": "./lib-module-dev/index.js",
   "browser": "./browser/lib/index.js",
-  "webpack:main": "./lib-webpack/index.js",
-  "webpack:main-dev": "./lib-webpack-dev/index.js",
-  "webpack:node": "./lib-webpack-node7/index.js",
-  "webpack:node-dev": "./lib-webpack-node7-dev/index.js",
-  "webpack:main-modern-browsers": "./lib-webpack-modern-browsers/index.js",
-  "webpack:main-modern-browsers-dev": "./lib-webpack-modern-browsers-dev/index.js",
+  "module:node": "./lib-module-node7/index.js",
+  "module:node-dev": "./lib-module-node7-dev/index.js",
+  "module:modern-browsers": "./lib-module-modern-browsers/index.js",
+  "module:modern-browsers-dev": "./lib-module-modern-browsers-dev/index.js",
   "scripts": {
     "build": "pob-build",
     "clean": "rm -Rf docs dist test/node6 coverage",
@@ -33,17 +34,17 @@
     "watch": "pob-watch"
   },
   "dependencies": {
-    "flow-runtime": "^0.7.0",
+    "flow-runtime": "^0.10.0",
     "nightingale-levels": "^1.1.0"
   },
   "devDependencies": {
-    "babel-eslint": "^7.1.1",
+    "babel-eslint": "^7.2.0",
     "babel-plugin-add-jsdoc-annotations": "^5.1.0",
+    "babel-preset-env": "^1.2.2",
     "babel-preset-jsdoc": "^0.4.0",
-    "babel-preset-latest": "^6.22.0",
-    "babel-preset-latest-node": "^0.1.0",
-    "babel-preset-modern-browsers": "^8.1.2",
-    "eslint": "^3.17.0",
+    "babel-preset-latest-node": "^0.2.2",
+    "babel-preset-modern-browsers": "^9.0.2",
+    "eslint": "^3.18.0",
     "eslint-config-airbnb-base": "^11.1.1",
     "eslint-config-pob": "^11.1.0",
     "eslint-plugin-babel": "^4.1.1",
@@ -55,7 +56,7 @@
     "komet-karma": "^0.2.5",
     "minami": "^1.1.1",
     "mocha": "^3.2.0",
-    "pob-babel": "^16.2.3",
+    "pob-babel": "^17.1.1",
     "pob-release": "^3.1.0",
     "xunit-file": "^1.0.0"
   }
