--- a/packages/nightingale/package.json
+++ b/packages/nightingale/package.json
@@ -10,43 +10,43 @@
   "repository": "git@github.com:nightingalejs/nightingale.git",
   "homepage": "https://github.com/nightingalejs/nightingale",
   "main": "index.js",
+  "module": "./lib-module/index.js",
+  "module-dev": "./lib-module-dev/index.js",
   "browser": "./lib-browsers/index.js",
   "browser-dev": "./lib-browsers-dev/index.js",
-  "webpack:main": "./lib-webpack/index.js",
-  "webpack:main-dev": "./lib-webpack-dev/index.js",
-  "webpack:node": "./lib-webpack-node7/index.js",
-  "webpack:node-dev": "./lib-webpack-node7-dev/index.js",
-  "webpack:main-modern-browsers": "./lib-webpack-modern-browsers/index.js",
-  "webpack:main-modern-browsers-dev": "./lib-webpack-modern-browsers-dev/index.js",
+  "module:node": "./lib-module-node7/index.js",
+  "module:node-dev": "./lib-module-node7-dev/index.js",
+  "module:modern-browsers": "./lib-module-modern-browsers/index.js",
+  "module:modern-browsers-dev": "./lib-module-modern-browsers-dev/index.js",
   "scripts": {
     "build": "pob-build",
     "clean": "rm -Rf docs dist test/node6 coverage",
     "generate:api": "rm -Rf docs/ ; mkdir docs/ ; pob-build doc ; jsdoc README.md lib-doc --recurse --destination docs/ --configure jsdoc.conf.json ; rm -Rf lib-doc",
     "generate:docs": "npm run generate:api && npm run generate:test-coverage",
-    "generate:test-coverage": "rm -Rf coverage/ ; NODE_ENV=production node --harmony --es_staging node_modules/istanbul/lib/cli.js cover node_modules/.bin/_mocha -- --recursive --reporter=spec -u tdd test/node6",
-    "lint": "eslint --ext .js,.jsx src/ test/src/",
+    "generate:test-coverage": "rm -Rf coverage/ ; NODE_ENV=production POBREGISTER_ONLY=./test node node_modules/istanbul/lib/cli.js cover node_modules/.bin/_mocha -- --require pob-babel/register --recursive --bail -u tdd test",
+    "lint": "eslint --ext .js,.jsx src/ test/",
     "prepare": "ln -s ../../git-hooks/pre-commit .git/hooks/pre-commit 2>/dev/null || true ; ln -s ../../git-hooks/post-checkout .git/hooks/post-checkout 2>/dev/null || true ; ln -s ../../git-hooks/post-merge .git/hooks/post-merge 2>/dev/null || true ; ln -s ../../git-hooks/prepare-commit-msg .git/hooks/prepare-commit-msg 2>/dev/null || true",
     "prepublish": "ln -s ../../git-hooks/pre-commit .git/hooks/pre-commit 2>/dev/null || true ; ln -s ../../git-hooks/post-checkout .git/hooks/post-checkout 2>/dev/null || true ; ln -s ../../git-hooks/post-merge .git/hooks/post-merge 2>/dev/null || true ; ln -s ../../git-hooks/prepare-commit-msg .git/hooks/prepare-commit-msg 2>/dev/null || true",
-    "preversion": "npm run lint && npm run build && pob-repository-check-clean",
+    "preversion": "yarn run lint && yarn run build && pob-repository-check-clean",
     "release": "pob-repository-check-clean && pob-release",
-    "test": "mocha --harmony --es_staging --recursive --bail -u tdd test/node6",
+    "test": "POBREGISTER_ONLY=./test mocha --require pob-babel/register --recursive --bail -u tdd test",
     "version": "pob-version",
     "watch": "pob-watch"
   },
   "dependencies": {
-    "flow-runtime": "^0.7.0",
+    "flow-runtime": "^0.10.0",
     "nightingale-levels": "^1.1.0",
-    "nightingale-logger": "^3.3.0"
+    "nightingale-logger": "^3.4.0"
   },
   "devDependencies": {
-    "babel-eslint": "^7.1.0",
+    "babel-eslint": "^7.2.0",
     "babel-plugin-add-jsdoc-annotations": "^5.1.0",
+    "babel-preset-env": "^1.2.2",
     "babel-preset-jsdoc": "^0.4.0",
-    "babel-preset-latest": "^6.22.0",
-    "babel-preset-latest-node": "^0.1.0",
-    "babel-preset-modern-browsers": "^8.1.2",
-    "eslint": "^3.17.0",
-    "eslint-config-airbnb-base": "^11.1.1",
+    "babel-preset-latest-node": "^0.2.2",
+    "babel-preset-modern-browsers": "^9.0.2",
+    "eslint": "^3.18.0",
+    "eslint-config-airbnb-base": "^11.1.2",
     "eslint-config-pob": "^11.1.0",
     "eslint-plugin-babel": "^4.1.1",
     "eslint-plugin-import": "^2.2.0",
@@ -62,11 +62,11 @@
     "komet-karma": "^0.2.5",
     "minami": "^1.1.1",
     "mocha": "^3.2.0",
-    "nightingale-console": "^2.3.0",
-    "nightingale-console-output": "^1.3.0",
-    "nightingale-json-formatter": "^1.3.0",
-    "nightingale-string": "^2.1.0",
-    "pob-babel": "^16.3.0",
+    "nightingale-console": "^2.4.1",
+    "nightingale-console-output": "^1.4.0",
+    "nightingale-json-formatter": "^1.4.0",
+    "nightingale-string": "^2.2.0",
+    "pob-babel": "^17.1.1",
     "pob-release": "^3.1.0",
     "xunit-file": "^1.0.0"
   }
