--- a/packages/nightingale-slack/circle.yml
+++ b/packages/nightingale-slack/circle.yml
@@ -12,7 +12,7 @@ dependencies:
     - ~/.cache/yarn
     - node_modules
   override:
-    - yarn install
+    - yarn
 
 test:
   pre:
@@ -20,7 +20,7 @@ test:
   override:
     - yarn run preversion
     - yarn run test
-    - XUNIT_FILE=$CIRCLE_TEST_REPORTS/junit/xunit.xml npm run test -- --reporter xunit-file
+    - POBREGISTER_ONLY=./testXUNIT_FILE=$CIRCLE_TEST_REPORTS/junit/xunit.xml node_modules/.bin/mocha --require pob-babel/register --recursive --reporter xunit-file -u tdd test
     - yarn run generate:test-coverage
   post:
     - bash <(curl -s https://codecov.io/bash)
