--- a/packages/nightingale-slack/package.json
+++ b/packages/nightingale-slack/package.json
@@ -14,13 +14,19 @@
     "node": ">=6.5.0"
   },
   "main": "./lib/index.js",
-  "webpack:node": "./lib-webpack-node7/index.js",
-  "webpack:node-dev": "./lib-webpack-node7-dev/index.js",
+  "module:node": "./lib-module-node7/index.js",
+  "module:node-dev": "./lib-module-node7-dev/index.js",
+  "module:aliases-node": {
+    "./createBody.js": "./lib-module-node7/createBody.js"
+  },
+  "module:aliases-node-dev": {
+    "./createBody.js": "./lib-module-node7-dev/createBody.js"
+  },
   "scripts": {
     "build": "pob-build",
     "clean": "rm -Rf docs dist test/node6 coverage",
     "generate:test-coverage": "rm -Rf coverage/ ; NODE_ENV=production POBREGISTER_ONLY=./test node node_modules/istanbul/lib/cli.js cover node_modules/.bin/_mocha -- --require pob-babel/register --recursive --bail -u tdd test",
-    "lint": "eslint --ext .js,.jsx src/ test/src/",
+    "lint": "eslint --ext .js,.jsx src/ test/",
     "prepare": "ln -s ../../git-hooks/pre-commit .git/hooks/pre-commit 2>/dev/null || true ; ln -s ../../git-hooks/post-checkout .git/hooks/post-checkout 2>/dev/null || true ; ln -s ../../git-hooks/post-merge .git/hooks/post-merge 2>/dev/null || true ; ln -s ../../git-hooks/prepare-commit-msg .git/hooks/prepare-commit-msg 2>/dev/null || true",
     "prepublish": "ln -s ../../git-hooks/pre-commit .git/hooks/pre-commit 2>/dev/null || true ; ln -s ../../git-hooks/post-checkout .git/hooks/post-checkout 2>/dev/null || true ; ln -s ../../git-hooks/post-merge .git/hooks/post-merge 2>/dev/null || true ; ln -s ../../git-hooks/prepare-commit-msg .git/hooks/prepare-commit-msg 2>/dev/null || true",
     "preversion": "yarn run lint && yarn run build && pob-repository-check-clean",
@@ -30,26 +36,26 @@
     "watch": "pob-watch"
   },
   "dependencies": {
-    "flow-runtime": "^0.6.1",
+    "flow-runtime": "^0.10.0",
     "nightingale-levels": "^1.0.0",
-    "nightingale-markdown-formatter": "^0.4.0",
-    "nightingale-raw-formatter": "^1.3.0",
-    "request": "^2.75.0"
+    "nightingale-markdown-formatter": "^0.6.0",
+    "nightingale-raw-formatter": "^1.5.0",
+    "request": "^2.81.0"
   },
   "devDependencies": {
-    "babel-eslint": "^7.0.0",
-    "babel-preset-latest-node": "^0.1.0",
-    "babel-register": "^6.23.0",
-    "eslint": "^3.16.1",
-    "eslint-config-airbnb-base": "^11.1.0",
+    "babel-eslint": "^7.2.1",
+    "babel-preset-latest-node": "^0.2.2",
+    "babel-register": "^6.24.0",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb-base": "^11.1.2",
     "eslint-config-pob": "^11.1.0",
-    "eslint-plugin-babel": "^4.1.0",
+    "eslint-plugin-babel": "^4.1.1",
     "eslint-plugin-import": "^2.2.0",
     "istanbul": "^0.4.5",
     "komet": "^0.1.4",
     "komet-karma": "^0.2.5",
     "mocha": "^3.2.0",
-    "pob-babel": "^16.2.3",
+    "pob-babel": "^17.1.1",
     "pob-release": "^3.1.0",
     "xunit-file": "^1.0.0"
   }
