--- a/packages/nightingale-ansi-formatter/package.json
+++ b/packages/nightingale-ansi-formatter/package.json
@@ -10,7 +10,6 @@
   "license": "ISC",
   "repository": "git@github.com:nightingalejs/nightingale-ansi-formatter.git",
   "homepage": "https://github.com/nightingalejs/nightingale",
-  "engines": {},
   "main": "./index.js",
   "module:node": "./lib-module-node7/index.js",
   "module:node-dev": "./lib-module-node7-dev/index.js",
@@ -28,16 +27,16 @@
     "watch": "pob-watch"
   },
   "dependencies": {
-    "ansi-styles": "github:chalk/ansi-styles#47ccb63c5b9b296b39188717b0efc4123a036d47",
+    "ansi-styles": "^3.0.0",
     "flow-runtime": "^0.10.0",
-    "nightingale-formatter": "^2.2.1"
+    "nightingale-formatter": "^2.2.2"
   },
   "devDependencies": {
-    "babel-eslint": "^7.2.0",
-    "babel-preset-env": "^1.2.2",
+    "babel-eslint": "^7.2.1",
+    "babel-preset-env": "^1.3.2",
     "babel-preset-latest-node": "^0.2.2",
-    "eslint": "^3.18.0",
-    "eslint-config-airbnb-base": "^11.1.1",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb-base": "^11.1.2",
     "eslint-config-pob": "^11.1.0",
     "eslint-plugin-babel": "^4.1.1",
     "eslint-plugin-import": "^2.2.0",
@@ -45,7 +44,7 @@
     "komet": "^0.1.4",
     "komet-karma": "^0.2.5",
     "mocha": "^3.2.0",
-    "pob-babel": "^17.1.1",
+    "pob-babel": "^17.2.0",
     "pob-release": "^3.1.0",
     "xunit-file": "^1.0.0"
   }
