--- a/packages/nightingale-ansi-formatter/circle.yml
+++ b/packages/nightingale-ansi-formatter/circle.yml
@@ -1,6 +1,6 @@
 machine:
   node:
-    version: 7.6.0
+    version: 8.3.0
 
 general:
   branches:
@@ -12,7 +12,7 @@ dependencies:
     - ~/.cache/yarn
     - node_modules
   override:
-    - yarn
+    - yarn --prefer-offline --pure-lockfile
 
 test:
   pre:
@@ -20,7 +20,6 @@ test:
   override:
     - yarn run preversion
     - yarn run test
-    - POBREGISTER_ONLY=./testXUNIT_FILE=$CIRCLE_TEST_REPORTS/junit/xunit.xml node_modules/.bin/mocha --require pob-babel/register --recursive --reporter xunit-file -u tdd test
     - yarn run generate:test-coverage
   post:
     - bash <(curl -s https://codecov.io/bash)
