--- a/packages/nightingale-ansi-formatter/package.json
+++ b/packages/nightingale-ansi-formatter/package.json
@@ -11,41 +11,72 @@
   "repository": "git@github.com:nightingalejs/nightingale-ansi-formatter.git",
   "homepage": "https://github.com/nightingalejs/nightingale",
   "main": "./index.js",
-  "module:node": "./lib-module-node7/index.js",
-  "module:node-dev": "./lib-module-node7-dev/index.js",
+  "module:node": "./lib-module-node8/index.js",
+  "module:node-dev": "./lib-module-node8-dev/index.js",
   "scripts": {
     "build": "pob-build",
     "clean": "rm -Rf docs dist test/node6 coverage",
-    "generate:test-coverage": "rm -Rf coverage/ ; NODE_ENV=production POBREGISTER_ONLY=./test node node_modules/istanbul/lib/cli.js cover node_modules/.bin/_mocha -- --require pob-babel/register --recursive --bail -u tdd test",
-    "lint": "eslint --ext .js,.jsx src/ test/",
-    "prepare": "ln -s ../../git-hooks/pre-commit .git/hooks/pre-commit 2>/dev/null || true ; ln -s ../../git-hooks/post-checkout .git/hooks/post-checkout 2>/dev/null || true ; ln -s ../../git-hooks/post-merge .git/hooks/post-merge 2>/dev/null || true ; ln -s ../../git-hooks/prepare-commit-msg .git/hooks/prepare-commit-msg 2>/dev/null || true",
-    "prepublish": "ln -s ../../git-hooks/pre-commit .git/hooks/pre-commit 2>/dev/null || true ; ln -s ../../git-hooks/post-checkout .git/hooks/post-checkout 2>/dev/null || true ; ln -s ../../git-hooks/post-merge .git/hooks/post-merge 2>/dev/null || true ; ln -s ../../git-hooks/prepare-commit-msg .git/hooks/prepare-commit-msg 2>/dev/null || true",
+    "generate:test-coverage": "NODE_ENV=production rm -Rf coverage/ ; jest --coverage --coverageReporters=lcov --coverageDirectory=coverage/",
+    "lint": "eslint --ext .js,.jsx src/",
+    "postcheckout": "./.git-hooks/post-checkout",
+    "postmerge": "./.git-hooks/post-merge",
+    "precommit": "./.git-hooks/pre-commit",
+    "preparecommitmsg": "./.git-hooks/prepare-commit-msg ${GIT_PARAMS}",
     "preversion": "yarn run lint && yarn run build && pob-repository-check-clean",
     "release": "pob-repository-check-clean && pob-release",
-    "test": "POBREGISTER_ONLY=./test mocha --require pob-babel/register --recursive --bail -u tdd test",
+    "test": "jest",
     "version": "pob-version",
     "watch": "pob-watch"
   },
+  "lint-staged": {
+    "package.json": [
+      "prettier --write",
+      "git add"
+    ],
+    "src/**/*.json": [
+      "prettier --write",
+      "git add"
+    ],
+    "src/**/*.{js,jsx}": [
+      "eslint --fix --quiet",
+      "git add"
+    ]
+  },
+  "jest": {
+    "cacheDirectory": "./node_modules/.cache/jest",
+    "testMatch": [
+      "**/src/**/?(*.)test.js",
+      "**/__tests__/**/*.test.js"
+    ],
+    "collectCoverageFrom": [
+      "src/**/*.js"
+    ]
+  },
   "dependencies": {
-    "ansi-styles": "^3.0.0",
-    "flow-runtime": "^0.10.0",
-    "nightingale-formatter": "^2.2.2"
+    "ansi-styles": "^3.2.0",
+    "flow-runtime": "0.10.0",
+    "nightingale-formatter": "^2.2.5"
   },
   "devDependencies": {
-    "babel-eslint": "^7.2.1",
-    "babel-preset-env": "^1.3.2",
-    "babel-preset-latest-node": "^0.2.2",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb-base": "^11.1.2",
-    "eslint-config-pob": "^11.1.0",
-    "eslint-plugin-babel": "^4.1.1",
-    "eslint-plugin-import": "^2.2.0",
-    "istanbul": "^0.4.5",
+    "babel-eslint": "^7.2.3",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-latest-node": "^0.4.0",
+    "eslint": "^4.3.0",
+    "eslint-config-airbnb-base": "^11.3.1",
+    "eslint-config-pob": "^16.0.4",
+    "eslint-config-prettier": "^2.3.0",
+    "eslint-plugin-babel": "^4.1.2",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-prettier": "^2.2.0",
+    "husky": "^0.14.3",
+    "jest": "^20.0.4",
+    "jest-junit-reporter": "^1.1.0",
     "komet": "^0.1.4",
     "komet-karma": "^0.2.5",
-    "mocha": "^3.2.0",
-    "pob-babel": "^17.2.0",
+    "lint-staged": "^4.0.2",
+    "pob-babel": "^18.1.3",
     "pob-release": "^3.1.0",
+    "prettier": "^1.5.3",
     "xunit-file": "^1.0.0"
   }
 }
