--- a/packages/nightingale-logger/package.json
+++ b/packages/nightingale-logger/package.json
@@ -52,27 +52,27 @@
     }
   },
   "dependencies": {
-    "@types/node": ">=8.0.0",
+    "@types/node": "^10.12.18",
     "nightingale-levels": "^4.0.0",
     "nightingale-types": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.2.2",
-    "@babel/preset-env": "7.2.0",
+    "@babel/preset-env": "7.2.3",
     "@types/jest": "23.3.10",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.1",
     "babel-jest": "23.6.0",
     "babel-preset-latest-node": "3.0.1",
     "babel-preset-modern-browsers": "13.0.1",
-    "eslint": "5.10.0",
+    "eslint": "5.11.0",
     "eslint-config-pob": "24.0.3",
     "eslint-plugin-babel": "5.3.0",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-prefer-class-properties": "^1.0.0",
     "eslint-plugin-typescript": "0.14.0",
     "jest": "23.6.0",
-    "pob-babel": "23.5.3",
+    "pob-babel": "23.5.5",
     "prettier": "1.15.3",
     "typedoc": "0.13.0",
     "typescript": "3.2.2",
